--- a/style.css
+++ b/style.css
@@ -49,3 +49,9 @@
     border: 2px solid black;
     width: 100%;
 }
+
+.RestaurentInfo{
+    border: 2px solid black;
+    width: 99%;
+    padding: 5px;
+}
